missing files and fix width on mobile

--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -168,7 +168,7 @@
       background-size: auto 50px;
       background-repeat: no-repeat;
       height: 50px;
-      width: 145px;
+      width: 300px;
       flex-grow: 1;
     }
   }
